# history-of-search

./: .gitignore  about-this-template.md  product-requirement-prompts.md  pyproject.toml
.github/workflows/: security.yml
src/: app.py  ingest_shakespeare.py  ingest_shakespeare_dual_semantic.py  ingest_shakespeare_elser.py  ingest_shakespeare_semantic.py  search_backend.py
src/static/: semantic-search.js
src/templates/: document_detail.html  error.html  index.html
